--- a/examples/demo-only-stuff/styles.css
+++ b/examples/demo-only-stuff/styles.css
@@ -25,9 +25,9 @@ pre {
 
 pre {
   padding: 10px;
-  background-color: #eee;
+  background-color: #f5f5f5;
   border-radius: 2px;
-  border: 1px solid #ccc;
+  border: 1px solid #f0f0f0;
   overflow: auto;
 }
 
