Toggle sidebar with css

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -103,6 +103,119 @@ canvas {
   margin: auto;
 }
 
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: -200px;
+  width: 200px;
+  height: 100%;
+  background-color: #fff;
+  z-index: 100;
+  outline: none;
+  -webkit-transition: 0.1s 0.1s ease-in-out left, 0.1s 0.1s ease-in-out box-shadow;
+  -moz-transition: 0.1s 0.1s ease-in-out left, 0.1s 0.1s ease-in-out box-shadow;
+  -ms-transition: 0.1s 0.1s ease-in-out left, 0.1s 0.1s ease-in-out box-shadow;
+  -o-transition: 0.1s 0.1s ease-in-out left, 0.1s 0.1s ease-in-out box-shadow;
+  transition: 0.1s 0.1s ease-in-out left, 0.1s 0.1s ease-in-out box-shadow;
+}
+
+.sidebar:focus {
+  left: 0;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
+}
+
+.sidebar:focus .toggle-inner {
+  opacity: 0;
+}
+
+.sidebar:focus .toggle::before {
+  top: 17px;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.sidebar:focus .toggle::after {
+  top: 17px;
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+.sidebar:focus .toggle-close {
+  display: block;
+}
+
+.toggle {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  display: block;
+  width: 36px;
+  height: 36px;
+  z-index: -1;
+  opacity: 1;
+  background-color: #fff;
+  border-radius: 50%;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+  -moz-tap-highlight-color: transparent;
+  -ms-tap-highlight-color: transparent;
+  -o-tap-highlight-color: transparent;
+  tap-highlight-color: transparent;
+}
+
+.toggle-close {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 36px;
+  height: 36px;
+  z-index: 1;
+}
+
+.toggle-inner,
+.toggle::before,
+.toggle::after {
+  position: absolute;
+  z-index: 0;
+  opacity: 1;
+  top: 17px;
+  left: 9px;
+  display: block;
+  width: 18px;
+  height: 2px;
+  background-color: #4078c0;
+  -webkit-transform-origin: 50% 50%;
+  -moz-transform-origin: 50% 50%;
+  -ms-transform-origin: 50% 50%;
+  -o-transform-origin: 50% 50%;
+  transform-origin: 50% 50%;
+  -webkit-transition: 0.2s ease-in-out all;
+  -moz-transition: 0.2s ease-in-out all;
+  -ms-transition: 0.2s ease-in-out all;
+  -o-transition: 0.2s ease-in-out all;
+  transition: 0.2s ease-in-out all;
+}
+
+.toggle::before,
+.toggle::after {
+  content: '';
+}
+
+.toggle::before {
+  top: 11px;
+}
+
+.toggle::after {
+  top: 23px;
+}
+
 @media all and (min-width: 481px) {
   .alias {
     display: inline;
@@ -111,6 +224,15 @@ canvas {
 }
 
 @media all and (min-width: 1025px) {
+  .sidebar {
+    left: 0;
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
+  }
+
+  .toggle {
+    display: none;
+  }
+
   .container {
     padding-left: 200px;
   }
