Style sidebar list items

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -135,7 +135,12 @@ canvas {
 }
 
 .sidebar li {
-  padding: 2px 8px 2px 4px;
+  padding: 4px 8px;
+  font-size: 12px;
+}
+
+.sidebar li strong {
+  font-size: 14px;
 }
 
 .sidebar:focus {
