--- a/docs/styles.css
+++ b/docs/styles.css
@@ -132,11 +132,11 @@ canvas {
   width: 100%;
   height: 100%;
   overflow: auto;
-  padding: 10px 0;
+  padding: 15px 0;
 }
 
 .sidebar li {
-  padding: 5px 10px;
+  margin: 5px 10px;
   font-size: 12px;
 }
 
