--- a/docs/src/css/styles.css
+++ b/docs/src/css/styles.css
@@ -56,6 +56,7 @@ pre {
   font-size: 14px;
   font-style: italic;
   display: inline;
+  margin: 10px auto;
   margin-left: 10px;
   color: #888;
 }
