Add feature list & link headers

--- a/docs/src/css/styles.css
+++ b/docs/src/css/styles.css
@@ -28,6 +28,14 @@ p {
   line-height: 18px;
 }
 
+ul {
+  padding: 0 0 0 20px;
+}
+
+li {
+  line-height: 24px;
+}
+
 hr {
   display: block;
   height: 0;
