--- a/docs/src/css/styles.css
+++ b/docs/src/css/styles.css
@@ -311,3 +311,35 @@ canvas {
     padding-left: 240px;
   }
 }
+
+.github-button {
+  display: inline-block;
+  font-size: 11px;
+  font-weight: bold;
+  text-shadow: 0 1px 0 rgba(255,255,255,.9);
+  background-color: #eee;
+  background-image: -webkit-linear-gradient(top,#fcfcfc,#eee);
+  background-image: -moz-linear-gradient(top,#fcfcfc,#eee);
+  background-image: linear-gradient(to bottom,#fcfcfc,#eee);
+  height: 18px;
+  padding: 0 5px;
+  color: #333;
+  vertical-align: middle;
+  border: 1px solid #d5d5d5;
+  border-radius: 3px;
+}
+
+.badges::after {
+  content: '';
+  display: table;
+  clear: both;
+}
+
+.badges > * {
+  float: left;
+  height: 20px;
+}
+
+.badges > * + * {
+  margin-left: 10px;
+}
