No background on badges by default

--- a/docs/src/css/styles.css
+++ b/docs/src/css/styles.css
@@ -417,11 +417,14 @@ canvas {
   line-height: 21px;
   border-radius: 4px;
   color: #fff;
-  background-color: #4078c0;
 }
 
 .badge.npm {
   background-color: #cb3837;
+}
+
+.badge.github {
+  background-color: #4078c0;
 }
 
 .badge + .badge {
